re PR debug/45171 (Invalid DWARF...DIE 0x00006a1d has multiple  AT_byte_size attributes.)

PR debug/45171
* dwarf2out.c (gen_typedef_die): Don't re-generate the die of
an is_naming_typedef_decl.

From-SVN: r162882